tests/negative/typecheck/product.orng
// product.orng:5:21: error: expected a value of type `Int`
// fn main() -> Int{(1,2)}
//                    ^
// 
fn main() -> Int{(1,2)}